# Copyright © 2019 Bart Massey
# [This program is licensed under the GPL version 3 or later.]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "one-way"
version = "0.5.1"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2024"
license-file = "LICENSE"

[dependencies]
telnet = "0.2.1"
rand = "0.8.5"
