# Copyright © 2019 Bart Massey
# [This program is licensed under the GPL version 3 or later.]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "one-way"
version = "0.5.2"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2024"
license-file = "LICENSE"

[dependencies]
fastrand = "2.3.0"
telnet = "0.2.3"

[features]
ansi = []
